[tool.poetry]
name = "share-articles-on-instagram-stories"
version = "0.1.0"
description = ""
authors = ["Andrew Samaha <andrew.samaha@gmail.com>"]
readme = "README.md"
packages = [{include = "share_articles_on_instagram_stories"}]

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^23.2.0"
certifi = "^2024.2.2"
charset-normalizer = "^3.3.2"
h11 = "^0.14.0"
idna = "^3.6"
lxml = "^5.1.0"
outcome = "^1.3.0.post0"
pysocks = "^1.7.1"
requests = "^2.31.0"
selenium = "^4.18.1"
sniffio = "^1.3.1"
sortedcontainers = "^2.4.0"
trio = "^0.24.0"
trio-websocket = "^0.11.1"
typing-extensions = "^4.10.0"
urllib3 = "^2.2.1"
wsproto = "^1.2.0"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
